--- a/.github/workflows/udf.yml
+++ b/.github/workflows/udf.yml
@@ -22,9 +22,11 @@ jobs:
       id: set-variable
       run: |
         if [[ ${{ inputs.instance }} == 00 ]]; then
+          echo "00"
           echo "group=vm00-runners" >> $GITHUB_OUTPUT
           echo "branch=testing" >> $GITHUB_OUTPUT
         elif [[ ${{ inputs.instance }} == 01 ]]; then
+          echo "01"
           echo "group=vm01-runners" >> $GITHUB_OUTPUT
           echo "branch=main" >> $GITHUB_OUTPUT
         fi
