--- a/.github/workflows/udf.yml
+++ b/.github/workflows/udf.yml
@@ -15,19 +15,16 @@ jobs:
     name: Set environment variables
     runs-on: ubuntu-latest
     outputs:
-      group: ${{ steps.set-variable.outputs.instance }}
+      group: ${{ steps.set-variable.outputs.group }}
       branch: ${{ steps.set-variable.outputs.branch }}
     steps:
     - name: Set environment for branch
       id: set-variable
       run: |
-        echo " ${{ inputs.instance }}"
         if [[ ${{ inputs.instance }} == 00 ]]; then
-          echo "00"
           echo "group=vm00-runners" >> $GITHUB_OUTPUT
           echo "branch=testing" >> $GITHUB_OUTPUT
         elif [[ ${{ inputs.instance }} == 01 ]]; then
-          echo "01"
           echo "group=vm01-runners" >> $GITHUB_OUTPUT
           echo "branch=main" >> $GITHUB_OUTPUT
         fi
