--- a/.github/workflows/udf.yml
+++ b/.github/workflows/udf.yml
@@ -35,7 +35,7 @@ jobs:
     steps:
     - name: Define queries
       run: |
-        read -r -d '' filelist << EOL
+        read -d '\n' filelist << EOL
         M  MTA_assignment_builder
         M  MTA_assignment_builder_home_time_check
         M  MTA_assignment_builder_fleet
